@@ -68,7 +68,7 @@ gmtkViterbiNew	6	0	0	7991	0.000215
 gmtkViterbiNew	7	0	0	9363	0.000244
 gmtkViterbiNew	8	0	0	10350	0.000278333333333
 gmtkViterbiNew	9	0	0	11416	0.000308
-gmtkViterbiNew	10	0	0	12540	0.000348333333333
+gmtkViterbiNew	10	0	0	20000	0.000348333333333
 gmtkViterbiNew	11	0	0	13683	0.00038
 gmtkViterbiNew	12	0	0	14576	0.000411666666667
 gmtkViterbiNew	13	0	0	15917	0.000448333333333
